--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,12 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# .gitignore for IntelliJ IDEA and Java projects
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+# Ignore IntelliJ IDEA project files
+.idea/
+*.iml
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# Ignore build output directories
+/target/
+/out/
 
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
+# Ignore logs and other system files
+*.log
